# art-attack

./: .gitignore  .gitmodules  README.md  body_position_hog.py  facial-distance.py  facial_distance.py  requirements.txt  serial_cmd.py  serial_test.py  serialtest.ino  setup-python-venv.sh  setup.cfg  setup.py
archive/detect/: motion_detect.py  test.py
archive/yolov3/: test.py
arduino-src/arduino16comms/: arduino16comms.ino
arduino-src/serial-cmd/: serial-cmd.ino
docs/: 404.html  humans.txt  index.html  index.xml  sitemap.xml
docs/about/: index.html
docs/categories/: index.html  index.xml
docs/posts/: index.xml
docs/process/: index.html  index.xml
docs/process/budget/: index.html
docs/system/: index.html  index.xml
docs/tags/: index.html  index.xml
hugo/: config.toml
hugo/content/: _index.md  about.md
hugo/data/: social.json
pip-wheel-metadata/art_attack_pkg_olin_college.dist-info/: LICENSE  METADATA
python-src/: integrate.py  math_operations.py  test.py
python-src/body/: body_detect.py  stream.py  test.py  video_stream.py
python-src/comms/: serial_cmd.py
python-src/fake-package/: position_to_motor.py
python-src/integrate/: integrate.py
python-src/math_ops/: math_operations.py
python-src/motor/: motor_control.py  motor_ctrl.py
python-src/serial/: test.py
python-src/serial-cmd/: serial_cmd.py  test.py
python/art_attack_pkg_olin_college.egg-info/: PKG-INFO  SOURCES.txt
scripts/: serial_cmd.py
scripts/integrate/: integrate.py
scripts/package_example/: add.py
serial-cmd/: serial-cmd.ino
yolov3/: body_position_yolo.py
(+29 files in other folders)
