[metadata]
name = art-attack-pkg-olin-college
version = 0.0.1
author = Anna Commers, Elisa Dhanger, Jennifer Lee, Marion Madanguit, Luke Nonas-Hunter
author-email = lhunter@olin.edu
description = A package to communicate with an Arduino to control multiple servos using computer vision and the PCA9685 chip
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/mmadanguit/art-attack/issues
url = https://github.com/mmadanguit/art-attack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = python
packages = find:
python_requires = >=3.6

[options.packages.find]
where = python
